fix bug collapsed

--- a/static/css/ticket.css
+++ b/static/css/ticket.css
@@ -219,6 +219,10 @@
     background-color: var(--third-color);
 }
 
+.discussion.collapsed {
+    display: none;
+}
+
 /* Gestion du pop up*/
 /* POP UP*/
 dialog {
